--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.noteme"
-        minSdk 21
+        minSdk 23
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.5.0'
     kapt 'com.google.dagger:hilt-android-compiler:2.44'
     implementation 'com.google.dagger:hilt-android:2.44'
+
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
